# togif

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in  video2gif.cpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  GifCreator.cpp  GifCreator.h  Logger.cpp  Logger.h  MessageBuilder.h  Video.cpp  Video.h  multi_progress.h  options.h  progress_bar.h  test.cpp  test_multiprogress_bar.cpp  test_progress_bar.cpp  thread_pool.h  utils.cpp  utils.h  video2gif.cpp
src/algs/: gif_to_video_alg.h  img_to_video_alg.h  raw_to_video_alg.h  video_to_gif_alg.h
